2012-02-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Set client encoding to UTF-8 explicitly for types/table tests.

	* types-table.scm (mgr try!): New proc.
	(mgr): Set client encoding to UTF-8; if not successful
	or if verification fails, exit failurefully.

2012-02-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres-qcons) proc: string-xrep

	* types-table.scm: Import SRFI 13, SRFI 14.
	(POISON): Include the xrep of the ‘cddr’ slice of ‘PESKY’.
	(POISON-COUNTS): Adjust char and byte counts.

2012-02-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[qcons] Fix bug: Make ‘sql-quote’ do backslash octal substitution.

	* Makefile.am (XFAIL_TESTS): Remove types-table.scm.

2012-02-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Expand ‘string’ round-trip test; mark xfail.

	* types-table.scm (PESKY): Add U+5C REVERSE SOLIDUS,
	U+22 QUOTATION MARK, U+7 BELL, U+C FORM FEED, U+A LINE FEED,
	U+D CARRIAGE RETURN, U+9 CHARACTER TABULATION, U+B LINE
	TABULATION, U+13 DEVICE CONTROL THREE, U+232C BENZENE RING,
	U+18 CANCEL, U+20 SPACE, plus eight two-char sequences made
	of ‘\’ followed by ‘[\"afnrtv]’.
	* Makefile.am (XFAIL_TESTS): New var.

2012-02-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add test to validate ‘string’ round-trip integrity.

	* types-table.scm: Add ‘coding:’ comment.
	(PESKY, POISON, POISON-COUNTS): New data structures;
	if ‘DEBUG’, display ‘POISON-COUNTS’ and ‘POISON’.
	(test:m-insert-1): Replace literal string "foo" with ‘POISON’.
	(mtest:select-*-error_condition): Select also "ec counts";
	add check to validate against ‘POISON-COUNTS’ and ‘POISON’.
	(main): Update expected-pass expression.

2012-02-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Display error if DEBUG for failing commands.

	* types-table.scm (command-ok?): If the
	result status is not ‘PGRES_COMMAND_OK’, display it
	and the error message as per ‘pg-result-error-message’.

2012-02-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Add abstractions: -fs, fs, fso
